[tool.poetry]
name = "birthdaycalendar"
version = "0.1.0"
description = "Script for turning a Proton contacts export into a birthday calendar."
authors = ["Bomott"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
vobject = "^0.9.6.1"
icalendar = "^5.0.7"

[tool.poetry.group.dev.dependencies]
pylint = "^2.17.4"
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
